# OmniCraft

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.pt-BR.md  README.md  RELEASING.md  SECURITY.md  openapi.json  pyproject.toml  render.yaml  setup.py
.github/: MAINTAINER  areas.json  copilot-instructions.md  pull_request_template.md
deploy/: README.md
designs/: CLI_CONTRACT.md  CUJ-ANALYSIS.md  CUJ-MAP.md  OBSERVABILITY.md  SANDBOX_CREDENTIAL_PROXY.md  SESSION_PROJECTS_SIDEBAR.md  ci-external-contributors-proposal.md  contributor-review-merge-proposal.md  harness-capabilities-bench-seam.md  harness-plugin-interface.md  issue-triage-proposal.md  opencode-native-gaps-qa.md  opencode-native-gaps.md
docs/: AGENT_YAML_SPEC.md  COMPUTER_CONTROL.md  CONNECTORS.md  IOS_SIMULATOR.md  OMNIGENT_BOT_SETUP.md  POLICIES.md  PROJECT_KNOWLEDGE.md  QWEN_FOLLOWUPS.md  QWEN_NATIVE_DESIGN.md  antigravity-native-rpc-core-design.md  antigravity-native-rpc-core-plan.md  cursor-native-cost-tracking.md  (+6 more)
sdks/python-client/: README.md  pyproject.toml
sdks/python-client/omnicraft_client/: __init__.py  _child_status.py  _client.py  _errors.py  _events.py  _responses.py  _server.py  _session.py  _sessions.py  _sessions_chat.py  _sse.py  _stream.py
sdks/python-client/omnicraft_client/tools/: __init__.py  _decorator.py  _handler.py  _schema.py  _state.py
sdks/ui/: README.md  pyproject.toml
sdks/ui/omnicraft_ui_sdk/: __init__.py
sdks/ui/omnicraft_ui_sdk/terminal/: _config.py  _formatter.py  _host.py  _tool_renderers.py
sdks/ui/omnigent_ui_sdk/terminal/: _formatter.py  _host.py
(+4945 files in other folders)
