[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnicraft-client"
version = "0.5.0a4"
description = "Python client SDK for the omnicraft server API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Sibling package — provides the SessionStreamEventType /
    # StreamEvent source of truth that the SDK validates SSE
    # envelopes against (see _sessions.py, _sse.py). Resolved via
    # the relative path below so the SDK can be installed
    # editable alongside the root ``omnicraft`` package. Version-locked
    # (==) so a published SDK always pairs with the server release it
    # shipped with (release-omnicraft.yml verifies the pin).
    "omnicraft==0.5.0a4",
    "httpx>=0.27",
    "pydantic>=2.0,<3",
]

[tool.uv.sources]
omnicraft = { path = "../..", editable = true }
